refactor commented_by to be ObjectId of user. refactor the backend and frontend for existing comments; added scripts to add users, votes, comments
